--- a/finalxm.sty
+++ b/finalxm.sty
@@ -8,7 +8,7 @@
 %%
 \NeedsTeXFormat{LaTeX2e}[1995/06/01]
 \ProvidesPackage{finalxm}
-          [2019/10/04 v2.6] 
+          [2019/10/15 v2.8] 
 %% v1.1 use package zref-lastpage & fmtcount to automatically convert number to string (in english) in cover page. 
 %% v1.2 use xstring package to substitute number to string (in malay) in title/cover page
 %% v1.3 added command \figurebm & \tablebm caption in bm for figure & table
@@ -34,6 +34,9 @@
 %% v2.5 [2019/04/04] cover page - translation font of the course 14pt
 %% v2.6	[2019/10/04] add smallskip to the qmarks
 %%					 add bigskip to newpartbm, newpartbmx
+%% v2.7 [2019/10/07] add newcommand for appendix 
+%% v2.8 [2019/10/15] renew \paperend to include new pagestyle submain. Nextpage command will stop with \paperend
+%%					 redefine zref lastpage option
 %%
 %\RequirePackage[malay]{babel}
 %\RequirePackage{translations}
@@ -45,7 +48,8 @@
 \RequirePackage[a4paper, top=2.3cm, left=2.54cm, right=2.54cm, bottom=3.67cm,nofoot]{geometry} %, footskip=0.6cm
 \RequirePackage{fancyhdr}	% header
 \RequirePackage{enumitem}	% enumerate questions
-\RequirePackage{fmtcount, zref-lastpage} % for page number
+\RequirePackage{fmtcount} % for counting page number
+\RequirePackage[lastpage]{zref} % for page number referencing
 \RequirePackage[dvipsnames]{xcolor}
 \RequirePackage{graphicx, caption, epstopdf, float} % for figure
 \RequirePackage{booktabs, tabularx, tabulary, multirow}	% for table
@@ -76,6 +80,20 @@
 			\ifnum\value{page}=\thelastpage \mbox{ } \\[1.5\baselineskip]  
 			\textbf{SULIT}\else
 			\nextpage \\[\baselineskip] \textbf{SULIT}\fi}}
+	\lhead{\textbf{SULIT}\\}
+	\rhead{(\textbf{\@courseCode})}
+	\fancyhead[C]{\raisebox{-2ex}{-\thepage-}}
+	\renewcommand{\headrulewidth}{0pt}
+	\setlength{\headheight}{45pt}
+}
+% set appendix style
+\fancypagestyle{submain}{
+	% set default header
+	\pagestyle{fancy}	 
+	\fancyhf{}
+	\fancyfoot[R]{{%
+			\mbox{ } \\[1.5\baselineskip]  
+			\textbf{SULIT}}}
 	\lhead{\textbf{SULIT}\\}
 	\rhead{(\textbf{\@courseCode})}
 	\fancyhead[C]{\raisebox{-2ex}{-\thepage-}}
@@ -138,6 +156,7 @@
 % setting new counter
 \newcounter{counterpart} 
 \newcounter{counterquestion}
+\newcounter{counterappendix}
 
 %%%%%%%%%%%%%%%%%%%%%
 % TODO FIGURE TABLE %
@@ -249,6 +268,25 @@
 	\bigskip
 }	
 %
+\newcommand{\appendixnum}{
+	\stepcounter{counterappendix}{%
+	\textbf{\appendixname~\Alph{counterappendix}} \\
+	\textbf{\emph{\fontsize{10pt}{\baselineskip}\selectfont [Lampiran~\Alph{counterappendix}]}}
+	\bigskip}	
+}
+\newcommand{\appendixnonum}{
+	\stepcounter{counterappendix}{%
+		\textbf{\appendixname} \\
+		\textbf{\emph{\fontsize{10pt}{\baselineskip}\selectfont [Lampiran]}}
+		\bigskip}	
+}
+\newcommand{\appendices}{
+	\stepcounter{counterappendix}{%
+		\renewcommand{\appendixname}{Appendices}
+		\textbf{\appendixname} \\
+		\textbf{\emph{\fontsize{10pt}{\baselineskip}\selectfont [Lampiran-lampiran]}}
+		\bigskip}	
+}
 %% setting the command question %%
 % use xparse package
 \NewDocumentCommand{\question}{O{}mo}{%
@@ -366,10 +404,14 @@
 
 %TODO End of paper setting
 \newcommand{\paperend}{
-	\centering\bfseries 
-	\vspace{\stretch{1}}
-	-oooOooo-\begingroup\fontsize{2pt}{1pt}\selectfont Template by: Mohd Hanafi Mat Som, D.Eng\endgroup	
-	\vspace{\stretch{1}}\\
+	\pagestyle{submain}
+	\vspace*{1mm}
+	\begin{center}
+		\linespread{0.2}\bfseries 
+		\vspace{\stretch{1}}
+		-oooOooo-{\fontsize{1.5pt}{1pt}\selectfont \\Template by: Mohd Hanafi Mat Som, D.Eng}	
+		\vspace{\stretch{1}}
+	\end{center}	
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
