Updated contact affiliation

--- a/finalxm.sty
+++ b/finalxm.sty
@@ -3,7 +3,7 @@
 %%
 %% created by
 %% Mohd Hanafi Mat Som
-%% PPK Mekatronik, Universiti Malaysia Perlis
+%% Faculty of Electronic Engineering Technology, Universiti Malaysia Perlis
 %% msmhanafi [at] gmail.com
 %%
 \NeedsTeXFormat{LaTeX2e}[1995/06/01]
